--- a/encoding.ipynb
+++ b/encoding.ipynb
@@ -264,6 +264,171 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bigram = CountVectorizer(ngram_range=(2,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trigram = CountVectorizer(ngram_range=(3,3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bigramvocab = bigram.fit_transform(data[\"text\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, 0, 1, 1]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bigramvocab[0].toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'people watch': 4,\n",
+       " 'watch cricket': 5,\n",
+       " 'cricket watch': 1,\n",
+       " 'people give': 3,\n",
+       " 'give comment': 2,\n",
+       " 'cricket give': 0}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bigram.vocabulary_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trigramvocab = trigram.fit_transform(data[\"text\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'people watch cricket': 3,\n",
+       " 'cricket watch cricket': 1,\n",
+       " 'people give comment': 2,\n",
+       " 'cricket give comment': 0}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trigram.vocabulary_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mix = CountVectorizer(ngram_range=(1,3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mixvocab = mix.fit_transform(data[\"text\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'people': 8,\n",
+       " 'watch': 13,\n",
+       " 'cricket': 1,\n",
+       " 'people watch': 11,\n",
+       " 'watch cricket': 14,\n",
+       " 'people watch cricket': 12,\n",
+       " 'cricket watch': 4,\n",
+       " 'cricket watch cricket': 5,\n",
+       " 'give': 6,\n",
+       " 'comment': 0,\n",
+       " 'people give': 9,\n",
+       " 'give comment': 7,\n",
+       " 'people give comment': 10,\n",
+       " 'cricket give': 2,\n",
+       " 'cricket give comment': 3}"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mix.vocabulary_"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
